feat: backend samesite

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,18 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Проксируем запросы к API
+    location /finansoid-api {
+        proxy_pass ${BACKEND_HOST}/finansoid-api;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Важно для кук: исправляем путь куки, если бэк выдает ее на /
+        proxy_cookie_path / /;
+    }
+
     # Обслуживание статических файлов
     location /assets/ {
         try_files $uri /index.html;
