--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ server {
 
     # Проксируем запросы к API
     location /finansoid-api {
-        proxy_pass ${BACKEND_HOST}/finansoid-api;
+        proxy_pass ${BACKEND_HOST};
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
